--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             android:value="2" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCMB2mdjCtUjFu2EArEi1xLFbzSs_OUdJY" />
+            android:value="API_KEY" />
     </application>
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
